# bumpver

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Makefile.bootstrapit.make  README.md  README.rst  activate  bootstrapit.sh  build_wheel_on_travis.sh  docker_base.Dockerfile  license.header  makefile  makefile.bootstrapit.make  makefile.config.make  makefile.extra.make  pylint-ignore.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  scratch.py  setup.cfg  setup.py  setup_travis.sh  travis_build_wheel.sh  travis_run_tests.sh
.github/workflows/: ci.yml
bumpver/: __init__.py  __main__.py  cli.py  config.py  parse.py  patterns.py  regexfmt.py  rewrite.py  utils.py  v1patterns.py  v1rewrite.py  v1version.py  v2patterns.py  v2rewrite.py  v2version.py  vcs.py  version.py
requirements/: conda.txt  development.txt  integration.txt  pypi.txt  vendor.txt
scripts/: bootstrapit_update.sh  exit_0_if_empty.py  pre-push-hook.sh  setup_conda_envs.sh  setup_venvs.sh  update_conda_env_deps.sh  update_readme_examples.py  update_venv_deps.sh
src/bumpver/: __init__.py  __main__.py  cli.py  config.py  hooks.py  parse.py  pathlib.py  patterns.py  pysix.py  regexfmt.py  rewrite.py  setuptools_v65_version.py  utils.py  v1patterns.py  v1rewrite.py  v1version.py  v2patterns.py  v2rewrite.py  v2version.py  vcs.py  version.py
src/pycalver/: __init__.py  __main__.py  cli.py  config.py  lex_id.py  parse.py  patterns.py  pysix.py  regexfmt.py  rewrite.py  v1cli.py  v1patterns.py  v1rewrite.py  v1version.py  v2cli.py  v2patterns.py  v2rewrite.py  v2version.py  vcs.py  version.py
src/pycalver2/: __init__.py  __main__.py  cli.py  config.py  patterns.py  regexfmt.py  rewrite.py  utils.py  v1patterns.py  v1rewrite.py  v1version.py  v2patterns.py  v2rewrite.py  v2version.py  vcs.py  version.py
stubs/: README.md
test/: test_cli.py  test_config.html  test_config.py  test_lex_id.py  test_parse.py  test_patterns.py  test_rewrite.py  test_vcs.py  test_version.py  util.py
test/fixtures/hooks/: post_commit_hook.py  pre_commit_hook.py  pre_commit_hook_fail.py
test/fixtures/project_a/: README.md  bumpver.toml  calver.toml  pycalver.toml
test/fixtures/project_b/: README.rst  setup.cfg  setup.py
test/fixtures/project_b/src/module_v1/: __init__.py
test/fixtures/project_b/src/module_v2/: __init__.py
test/fixtures/project_c/: pyproject.toml
test/fixtures/project_d/: pyproject.toml
tests/: conftest.py  test_cli.py  test_config.py  test_parse.py  test_patterns.py  test_rewrite.py  test_version.py  util.py
tests/fixtures/project_a/: README.md  bumpver.toml
tests/fixtures/project_b/: README.rst  setup.cfg  setup.py
tests/fixtures/project_b/src/module_v1/: __init__.py
tests/fixtures/project_c/: pyproject.toml
