[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 1

[mypy]
check_untyped_defs = True
disallow_untyped_calls = True
follow_imports = silent
strict_optional = True
ignore_missing_imports = True

[flake8]
max-line-length = 100
max-complexity = 10
ignore =
    # Missing trailing comma (handled by sjfmt)
    C812
    # No whitespace after paren open "("
    E201
    # No whitespace before paren ")"
    E202
    # Whitespace before ":"
    E203
    # Multiple spaces before operator
    E221
    # Multiple spaces after operand
    E222
    # Multiple spaces before keyword
    E272
    # Spaces around keyword/parameter equals
    E251
    # Line too long (B950 is used instead)
    E501
    # Line break before binary op
    W503
    # Line break after binary op
    W504
    # Missing docstring in public module
    D100
    # Missing docstring in public class
    D101
    # Missing docstring in public method
    D102
    # Missing docstring in public function
    D103
    # Missing docstring on __init__
    D107
    # No blank lines allowed after function docstring
    D202
    # First line should be in imperative mood
    D401
select = A,AAA,D,C,E,F,W,H,B,D212,D404,D405,D406,B901,B950
exclude =
    .git
    __pycache__
    .eggs/
    dist/
    .mypy_cache

# Hopefully this can be resolved, so D404, D405 start working
# https://github.com/PyCQA/pydocstyle/pull/188


[tool:pytest]
addopts = --doctest-modules


[pycalver]
current_version = v201812.0018
commit = True
tag = True
push = True

[pycalver:file_patterns]
bootstrapit.sh =
    PACKAGE_VERSION="{pycalver}"
setup.cfg =
    current_version = {pycalver}
setup.py =
    version="{pep440_pycalver}"
src/pycalver/__init__.py =
    __version__ = "{pycalver}"
src/pycalver/__main__.py =
    click.version_option(version="{pycalver}")
README.md =
    [PyCalVer {version}]
    https://img.shields.io/badge/PyCalVer-{calver}{build}-blue.svg
    Successfully installed pycalver-{pep440_version}
    pycalver, version {version}
