[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 1

[mypy]
check_untyped_defs = True
disallow_untyped_calls = True
follow_imports = silent
strict_optional = True
error_summary = False
ignore_missing_imports = True
show_error_codes = True
warn_unreachable = True
warn_return_any = True
warn_unused_ignores = True
warn_redundant_casts = True


[tool:isort]
known_third_party = click,pathlib2
force_single_line = True
length_sort = True


[flake8]
max-line-length = 100
max-complexity = 10
ignore =
    # Missing trailing comma (handled by sjfmt)
    C812
    # No whitespace after paren open "("
    E201
    # No whitespace before paren ")"
    E202
    # Whitespace before ":"
    E203
    # Multiple spaces before operator
    E221
    # Multiple spaces after operand
    E222
    # Missing whitespace after ','
    E231
    # Multiple spaces after ':'
    E241
    # Spaces around keyword/parameter equals
    E251
    # Multiple spaces before keyword
    E272
    # Line too long (B950 is used instead)
    E501
    # Line break before binary op
    W503
    # Line break after binary op
    W504
    # Missing docstring in public module
    D100
    # Missing docstring in public class
    D101
    # Missing docstring in public method
    D102
    # Missing docstring in public function
    D103
    # Missing docstring in public package
    # D104
    # Missing docstring in magic method
    # D105
    # Missing docstring on __init__
    D107
    # No blank lines allowed after function docstring
    D202
    # First line should end in a period
    D400
    # First line should be in imperative mood
    D401
select = A,AAA,D,C,E,F,W,H,B,D212,D404,D405,D406,B901,B950
exclude =
    .git
    __pycache__
    .eggs/
    dist/
    .mypy_cache

# Hopefully this can be resolved, so D404, D405 start working
# https://github.com/PyCQA/pydocstyle/pull/188


[tool:pytest]
addopts = --doctest-modules


[pycalver]
current_version = v202007.1036
version_pattern = "{pycalver}"
commit = True
tag = True
push = True

[pycalver:file_patterns]
bootstrapit.sh =
    PACKAGE_VERSION="{pycalver}"
setup.cfg =
    current_version = {pycalver}
setup.py =
    version="{pep440_pycalver}"
src/pycalver/__init__.py =
    __version__ = "{pycalver}"
src/pycalver/cli.py =
    click.version_option(version="{pycalver}")
README.md =
    [PyCalVer {version}]
    img.shields.io/static/v1.svg?label=PyCalVer&message={version}&color=blue
    Successfully installed pycalver-{pep440_version}
    pycalver, version {version}


[tool:pylint]
score = no
reports = no

jobs = 4

# Set the output format. Available formats are text, parseable, colorized,
# msvs (visual studio) and html. You can also give a reporter class, eg
# mypackage.mymodule.MyReporterClass.
output-format = colorized

# Maximum number of locals for function / method body
max-locals = 20

# Maximum number of arguments for function / method
max-args = 8

good-names = logger,i,ex

# These are packages that are implemented as c extensions and
# which pylint cannot do introspection on.
extension-pkg-whitelist = numpy,pandas,lxml,PIL,sklearn,pyblake2

notes=TODO,FIXME,XXX,SLOW,BUG

# similarities/duplicaition checker
min-similarity-lines=4
ignore-comments=yes
ignore-docstrings=yes
ignore-imports=yes

# https://pylint.pycqa.org/en/stable/technical_reference/features.html
disable =
    bad-continuation,
    bad-whitespace,
    line-too-long,
    logging-not-lazy,
    logging-fstring-interpolation,
    no-else-return,
    no-else-raise,
    too-few-public-methods,
    missing-docstring,
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
